kustomize/overlays/scots-lab/apps/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:2024.5.13-a0bc346
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi

        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          args:
            - --provider=oidc
            - --oidc-issuer-url=https://auth.srbii.com/realms/homelab
            - --upstream=http://127.0.0.1:80
            - --http-address=0.0.0.0:4180
            - --email-domain=*
            - --pass-user-headers=false
            - --cookie-secure=true
            - --cookie-name=_oauth2_ittools
            - --redirect-url=https://tools.srbii.com/oauth2/callback
            - --whitelist-domain=.srbii.com
            - --skip-provider-button=true
            - --session-cookie-minimal=true
          ports:
            - containerPort: 4180
              name: proxy
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
